Updated swagger auth
